testdata/fixtures/audit/negative/exec_user_input_neg_concat_string_py.py
# Plain string concatenation with no shell-invoking call — must NOT trip.
def greet(name):
    message = "hello " + name
    return message
